@@ -1,0 +1,34 @@
+package tk.themcbros.interiormod.items;
+
+import net.minecraft.block.Block;
+import net.minecraft.block.BlockState;
+import net.minecraft.block.Blocks;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.resources.I18n;
+import net.minecraft.client.util.ITooltipFlag;
+import net.minecraft.item.BlockItem;
+import net.minecraft.item.BlockItemUseContext;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.TallBlockItem;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.StringTextComponent;
+import net.minecraft.util.text.TextFormatting;
+import net.minecraft.util.text.TranslationTextComponent;
+import net.minecraft.world.World;
+import org.lwjgl.glfw.GLFW;
+
+import javax.annotation.Nullable;
+import java.util.List;
+
+public class DescTallBlockItem extends DescBlockItem {
+
+    public DescTallBlockItem(Block block, Properties properties) {
+        super(block, properties);
+    }
+
+    @Override
+    protected boolean placeBlock(BlockItemUseContext context, BlockState state) {
+        context.getWorld().setBlockState(context.getPos().up(), Blocks.AIR.getDefaultState(), 27);
+        return super.placeBlock(context, state);
+    }
+}
