@@ -25,10 +25,16 @@
 	"block.interiormod.table": "Table",
 	"block.interiormod.table.name": "%s Table",
 	"block.interiormod.fridge": "Fridge",
+	"block.interiormod.fridge.desc0": "Can store only food in it",
 	"block.interiormod.lamp": "Nightlight Lamp",
+	"block.interiormod.lamp.desc0": "A lamp with an integrated",
+	"block.interiormod.lamp.desc1": "inverted daylight detector",
 	"block.interiormod.lamp_on_a_stick": "Lamp on a Stick",
+	"block.interiormod.lamp_on_a_stick.desc0": "The Nightlight Lamp on two sticks",
 	"block.interiormod.trash_can": "Trash Can",
+	"block.interiormod.trash_can.desc0": "Destroys any item that is put in",
 	"block.interiormod.modern_door": "Modern Door",
+	"block.interiormod.modern_door.desc0": "This is a modern variant of the vanilla door",
 
 	"container.interiormod.fridge": "Fridge",
 	"container.interiormod.trash_can": "Trash Can",
