@@ -1,7 +1,8 @@
 {
 	"credit": "Made with Blockbench",
 	"textures": {
-		"0": "interiormod:block/modern_door_bottom"
+		"0": "interiormod:block/modern_door_bottom",
+		"particle": "interiormod:block/modern_door_bottom"
 	},
 	"elements": [
 		{
